Generate Pelican site

--- a/downloads/notebooks/shapely_cython_experiment.ipynb
+++ b/downloads/notebooks/shapely_cython_experiment.ipynb
@@ -15,7 +15,9 @@
    "source": [
     "[Shapely](https://shapely.readthedocs.io/en/stable/index.html) is a Python package for manipulation and analysis of geometric objects. It is based on the widely deployed [GEOS](http://trac.osgeo.org/geos/) (e.g. the engine of [PostGIS](http://postgis.org)) library. \n",
     "\n",
-    "[GeoPandas](http://geopandas.readthedocs.io/en/latest/), a library"
+    "[GeoPandas](http://geopandas.readthedocs.io/en/latest/) is a library that tries to make working with geospatial data in python easier. GeoPandas extends the pandas data analysis library to work with tables of geospatially annotated data, and does this based on the functionality provided by Shapely.\n",
+    "\n",
+    "One of the reasons that GeoPandas can be slow, is that it iterates over the Shapely objects in pure python. In this blog post I explore using Cython to improve this."
    ]
   },
   {
@@ -117,6 +119,11 @@
    "source": [
     "poly.contains(point)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
