--- a/downloads/notebooks/shapely_cython_experiment.ipynb
+++ b/downloads/notebooks/shapely_cython_experiment.ipynb
@@ -1,10 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "# Experiment of using Cython to speed-up vectorized shapely operations\n"
    ]
@@ -2108,7 +2110,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "p2 = shapely.prepared.prep(poly)"
