add notebook link

--- a/content/downloads/notebooks/pandas_sprint_activity.ipynb
+++ b/content/downloads/notebooks/pandas_sprint_activity.ipynb
@@ -205,6 +205,13 @@
    "source": [
     "So as expected, we clearly see a huge peak in github activity compard to the weeks before :-)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*This post was written in the Jupyter notebook. You can download this [notebook](https://github.com/jorisvandenbossche/jorisvandenbossche.github.io/blob/src/content/downloads/notebooks/pandas_sprint_activity.ipynb).*"
+   ]
   }
  ],
  "metadata": {
